--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
     <div class="bg-nearwhite">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="https://example.com" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="https://inform-creekside.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
       Operation Inform Creekside
     </a>
     <div class="flex-l items-center">
@@ -112,7 +112,7 @@
     </main>
     <footer class="bg-nearwhite bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://example.com" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://inform-creekside.github.io/" >
     &copy; 2019 Operation Inform Creekside
   </a>
     <div>
