--- a/railyard/pta/index.html
+++ b/railyard/pta/index.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Creekside PTA activity" />
 <meta property="og:description" content="The Creekside PTA has taken an official position on the railyard" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://example.com/railyard/pta/" />
+<meta property="og:url" content="https://inform-creekside.github.io/railyard/pta/" />
 
 <meta itemprop="name" content="Creekside PTA activity">
 <meta itemprop="description" content="The Creekside PTA has taken an official position on the railyard">
@@ -57,11 +57,11 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('https://example.com/images/creekside.png');">
+  <header class="cover bg-top" style="background-image: url('https://inform-creekside.github.io/images/creekside.png');">
     <div class="pb3-m pb6-l bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="https://example.com" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="https://inform-creekside.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
       Operation Inform Creekside
     </a>
     <div class="flex-l items-center">
@@ -255,7 +255,7 @@ to Creekside parents for these meetings.</li>
     </main>
     <footer class="bg-nearwhite bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://example.com" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://inform-creekside.github.io/" >
     &copy; 2019 Operation Inform Creekside
   </a>
     <div>
