--- a/railyard/timeline/index.html
+++ b/railyard/timeline/index.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Timeline" />
 <meta property="og:description" content="Learn more about the series of events leading up to the decision made by the Durham City Council to approve the industrial zone meant to be a rail yard and maintenance facility for more than twenty light rail trains." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://example.com/railyard/timeline/" />
+<meta property="og:url" content="https://inform-creekside.github.io/railyard/timeline/" />
 
 <meta itemprop="name" content="Timeline">
 <meta itemprop="description" content="Learn more about the series of events leading up to the decision made by the Durham City Council to approve the industrial zone meant to be a rail yard and maintenance facility for more than twenty light rail trains.">
@@ -57,11 +57,11 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('https://example.com/images/creekside.png');">
+  <header class="cover bg-top" style="background-image: url('https://inform-creekside.github.io/images/creekside.png');">
     <div class="pb3-m pb6-l bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="https://example.com" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="https://inform-creekside.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
       Operation Inform Creekside
     </a>
     <div class="flex-l items-center">
@@ -244,7 +244,7 @@
     </main>
     <footer class="bg-nearwhite bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://example.com" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://inform-creekside.github.io/" >
     &copy; 2019 Operation Inform Creekside
   </a>
     <div>
