updates to web page

--- a/railyard/index.html
+++ b/railyard/index.html
@@ -115,7 +115,6 @@
     </div>
   </header>
 
-
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
@@ -148,9 +147,9 @@ The Creekside PTA calls upon local leaders to immediately identify representativ
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
-      At no point in this this timeline was there ever any effort to directly contact parents, guardians or teaching staff at Creekside Elementary.
+      At no point was there ever any effort to directly contact parents, guardians or teaching staff at Creekside Elementary.
 A text version of the timeline:
-   Year Action Summary     2010 Site identification Go Triangle Alternatives Analysis identified 5 sites for the ROMF   2012 May 2012 public comment period After four meetings, GoTriangle identified fifth Alston Ave site   2012 Environmental Analysis Process GoTriangle hosted more than 300 meetings with public groups   2015 GoTriangle notified Durham Public School District GoTriangle notified Durham Public School District about proposed ROMF at Farrington Road site.
+.tg {border-collapse:collapse;border-spacing:0;border-color:#ccc;} .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;} .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;} .tg .tg-0lax{text-align:left;vertical-align:top}     Year Topic Detail   2010 Site identification Go Triangle Alternatives Analysis identified 5 sites for the ROMF   2012 May 2012 public comment period After four meetings, GoTriangle identified fifth Alston Ave site   2012 Environmental Analysis Process GoTriangle hosted more than 300 meetings with public groups   2015 GoTriangle notified Durham Public School District GoTriangle notified Durham Public School District about proposed ROMF at Farrington Road site.
     </div>
   </div>
 </div>
