--- a/timeline/index.html
+++ b/timeline/index.html
@@ -124,98 +124,87 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>At no point was there ever any effort to directly contact parents, guardians or teaching staff at Creekside Elementary.</p>
+    <section class="cf ph3 ph5-l pv3 pv4-l f4 center measure-wide lh-copy mid-gray"><p>At no point was there ever any effort to directly contact parents, guardians or teaching staff at Creekside Elementary.</p>
 
-<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gb77HufB3gFdYeCT40YJx1FRKH3lB_VpLQE6feg6Bps&font=Default&lang=en&initial_zoom=2&start_at_slide=8&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gb77HufB3gFdYeCT40YJx1FRKH3lB_VpLQE6feg6Bps&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 
-<p>A text version of the timeline:</p>
+<hr />
+
+<p><strong>A text version of the timeline</strong>:</p>
 
 <p><style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
+.tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;}
 .tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
 </style>
-<table class="tg" style="undefined;table-layout: fixed; width: 1196px">
+<table class="tg" style="undefined;table-layout: fixed; width: 1049px">
 <colgroup>
-<col style="width: 41px">
-<col style="width: 326px">
-<col style="width: 829px">
+<col style="width: 61px">
+<col style="width: 159px">
+<col style="width: 494px">
+<col style="width: 335px">
 </colgroup>
   <tr>
-    <th class="tg-0lax">Year</th>
-    <th class="tg-0lax">Topic</th>
-    <th class="tg-0lax">Detail</th>
+    <td class="tg-0lax">Year</td>
+    <td class="tg-0lax">Headline</td>
+    <td class="tg-0lax">Text</td>
+    <td class="tg-0lax">Relevant link</td>
   </tr>
   <tr>
-    <td class="tg-0lax">2010</td>
-    <td class="tg-0lax">Site identification</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/do_aa_final_report_appendices.pdf">Go Triangle Alternatives Analysis identified 5 sites for the ROMF</a></td>
+    <td class="tg-0pky">2010</td>
+    <td class="tg-0pky">Site identification</td>
+    <td class="tg-0pky">Go Triangle Alternatives Analysis identified 5 sites for the ROMF</td>
+    <td class="tg-0pky">&lt;<a href="https://gotriangle.org/sites/default/files/do_aa_final_report_appendices.pdf&gt;">https://gotriangle.org/sites/default/files/do_aa_final_report_appendices.pdf&gt;</a></td>
   </tr>
   <tr>
     <td class="tg-0lax">2012</td>
     <td class="tg-0lax">May 2012 public comment period</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/d-o_lrt_scoping_booklet_04-23-2012_rev_per_fta_v71.pdf">After four meetings, GoTriangle identified fifth Alston Ave site</a></td>
+    <td class="tg-0lax">After four meetings, GoTriangle identified fifth Alston Ave site</td>
+    <td class="tg-0lax">&lt;<a href="https://gotriangle.org/sites/default/files/d-o_lrt_scoping_booklet_04-23-2012_rev_per_fta_v71.pdf&gt;">https://gotriangle.org/sites/default/files/d-o_lrt_scoping_booklet_04-23-2012_rev_per_fta_v71.pdf&gt;</a></td>
   </tr>
   <tr>
     <td class="tg-0lax">2012</td>
     <td class="tg-0lax">Environmental Analysis Process</td>
     <td class="tg-0lax">GoTriangle hosted more than 300 meetings with public groups</td>
+    <td class="tg-0lax"></td>
   </tr>
   <tr>
     <td class="tg-0lax">2015</td>
     <td class="tg-0lax">GoTriangle notified Durham Public School District</td>
     <td class="tg-0lax">GoTriangle notified Durham Public School District about proposed ROMF at Farrington Road site. GoTriangle met with Creekside&rsquo;s principal, the Deputy Superintendent of Operational Services; the Director of Transportation; and Director of Construction &amp; Capital Planning</td>
+    <td class="tg-0lax"></td>
   </tr>
   <tr>
     <td class="tg-0lax">2015</td>
     <td class="tg-0lax">FTA published environmental study</td>
     <td class="tg-0lax">Federal Transit Administration published the environmental study</td>
+    <td class="tg-0lax"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">2015</td>
-    <td class="tg-0lax">Hearings for &lsquo;Final Environmental Impact Statement&rsquo;</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/0634b_app_c.2.3_legalnotice_v0.pdf">Triangle Transit holds public hearings on environmental study</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2015</td>
+    <td class="tg-0lax"><sup>2015</sup>&frasl;<sub>08</sub></td>
     <td class="tg-0lax">GoTriangle meeting at Creekside</td>
     <td class="tg-0lax">GoTriangle held a workshop at Creekside Elemnentary about the &lsquo;maintenance facility&rsquo;</td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax"><sup>2015</sup>&frasl;<sub>9</sub></td>
+    <td class="tg-0lax">Hearings for &lsquo;Final Environmental Impact Statement&rsquo;</td>
+    <td class="tg-0lax">Triangle Transit holds public hearings on environmental study</td>
+    <td class="tg-0lax">&lt;<a href="https://gotriangle.org/sites/default/files/0634b_app_c.2.3_legalnotice_v0.pdf&gt;">https://gotriangle.org/sites/default/files/0634b_app_c.2.3_legalnotice_v0.pdf&gt;</a></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax"><sup>2015</sup>&frasl;<sub>12</sub></td>
+    <td class="tg-0lax">GoTriangle publishes &lsquo;public involvement overview&rsquo; document</td>
+    <td class="tg-0lax">Committment by GoTriangle to communicate with parents and students in light rail corridor.</td>
+    <td class="tg-0lax">&lt;<a href="https://gotriangle.org/sites/default/files/0634b_app_c.1_v0.pdf&gt;">https://gotriangle.org/sites/default/files/0634b_app_c.1_v0.pdf&gt;</a></td>
   </tr>
   <tr>
     <td class="tg-0lax">2016</td>
     <td class="tg-0lax">Combined Final Environmental Impact Statement Record of Decision</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/0634_feisrod-160211_v0.pdf">Added clarification in the Farrington Road ROMF section &lsquo;Direct impacts to Creekside Elementary School are not anticipated due to the distancefrom the Farrington Road ROMF and existing vegetation.&rsquo;</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2016</td>
-    <td class="tg-0lax">Farrington Road site supported by Durham government</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/0634_feisrod-160211_v0.pdf">Durham County and City issued a &ldquo;Record of Decision&rdquo; that included Farrington Road as the ROMF</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2017</td>
-    <td class="tg-0lax">GoTriangle had neighborhood meetings prior to Zoning change</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/0637b_rpt_sea-chapter-6-public-involvement.pdf#page=6">GoTriangle sent letters to property owners within 1,000 feet of the site.</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2018</td>
-    <td class="tg-0lax">GoTriangle held workshop at Creekside Elementary</td>
-    <td class="tg-0lax"><a href="https://gotriangle.org/sites/default/files/romf_qa_nov2018.pdf">Main purpose of workshops at Creekside Elementary was to discuss &ldquo;types of screening and fences along Farrington Road&rdquo;</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2018</td>
-    <td class="tg-0lax">Durham City Zoning Hearing</td>
-    <td class="tg-0lax"><a href="https://durhamnc.gov/AgendaCenter/ViewFile/Item/2629?fileID=9889">Durham City Planning commission did NOT vote in favor of industrial zoning change for ROMF.</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2018</td>
-    <td class="tg-0lax">Charlotte ROMF tour</td>
-    <td class="tg-0lax"><a href="http://durham.granicus.com/MediaPlayer.php?view_id=2&amp;amp;clip_id=2236&amp;amp;meta_id=295298&amp;amp;startTime=6730">At a tour of the Charlotte ROMF facility by GoTriangle, Durham City Council members, and Durham City residents, the facility manager stated that the Farrington Road ROMF would &ldquo;not work&rdquo;.</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">2018</td>
-    <td class="tg-0lax">Durham City Council Meeting</td>
-    <td class="tg-0lax"><a href="https://durhamnc.gov/AgendaCenter/ViewFile/Minutes/_12032018-1185">Durham City Council voted in favor of zoning change for rail yard site.</a></td>
+    <td class="tg-0lax">Added clarification in the Farrington Road ROMF section &ldquo;Direct impacts&lt;/td&gt;
+    <td class="tg-0lax"></td>
   </tr>
 </table></p>
 </section>
